<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_Axes" Id="{cb337793-8296-43c7-88ce-00216ef757ed}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Axis1 : AXIS_REF;
	Axis2 : AXIS_REF;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>